--- a/style.css
+++ b/style.css
@@ -8,22 +8,26 @@
 #navigation {
   display: flex;
   justify-content: space-between;
-  background: rgb(4, 153, 252);
+  background: #0C94DF;
   align-items: center;
   padding: 0 15% 0 15%;
 }
 #navigation > ul {
     display: flex;
+    
 }
 
 #navigation > ul > li{
-    margin: 0 10px;
-    padding: 15px 0;
+    padding: 0 20px; 
 }
+
 
 #navigation > ul > li > a{
     color: aliceblue;
-    font-size: 18px;
+    font-size: 20px;
+    
+    
+
 }
 
 
